# text_editor

./: CMakeLists.txt  RimSettings.txt
src/: editorContent.cpp  editorContent.h  editorViewer.cpp  editorViewer.h  fileObject.cpp  fileObject.h  inputController.cpp  inputController.h  main.cpp  settings.h
